RESOLVED FIXED37398
Missing CONTEXT_MENUS Guards
https://bugs.webkit.org/show_bug.cgi?id=37398
Summary Missing CONTEXT_MENUS Guards
Joseph Pecoraro
Reported 2010-04-10 17:43:23 PDT
There are some missing ENABLE checks in WebCore.
Attachments
[PATCH] Add Missing Guards (3.87 KB, patch)
2010-04-10 17:45 PDT, Joseph Pecoraro
ddkilzer: review+
Joseph Pecoraro
Comment 1 2010-04-10 17:45:43 PDT
Created attachment 53064 [details] [PATCH] Add Missing Guards
David Kilzer (:ddkilzer)
Comment 2 2010-04-10 17:49:36 PDT
Comment on attachment 53064 [details] [PATCH] Add Missing Guards r=me
Joseph Pecoraro
Comment 3 2010-04-10 17:53:06 PDT
Committed r57429 M WebCore/ChangeLog M WebCore/bindings/js/JSInspectorFrontendHostCustom.cpp M WebCore/inspector/InspectorFrontendHost.cpp M WebCore/inspector/InspectorFrontendHost.h r57429 = 873870f3ac2b7b5e5570c6274668a630f5c7ca1c (trunk) http://trac.webkit.org/changeset/57429
Note You need to log in before you can comment on or make changes to this bug.