2010-04-10  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by David Kilzer.

        Missing CONTEXT_MENUS Guards
        https://bugs.webkit.org/show_bug.cgi?id=37398

        Added missing ENABLE(CONTEXT_MENUS) guards.

        * bindings/js/JSInspectorFrontendHostCustom.cpp:
        (WebCore::JSInspectorFrontendHost::showContextMenu):
        * inspector/InspectorFrontendHost.cpp:
        (WebCore::InspectorFrontendHost::InspectorFrontendHost):
        (WebCore::InspectorFrontendHost::disconnectClient):
        * inspector/InspectorFrontendHost.h:

Canonical link: https://commits.webkit.org/48718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57429 268f45cc-cd09-0410-ab3c-d52691b4dbfc