WebCore/inspector/InspectorFrontendHost.h
@@ -77,12 +77,16 @@ public:
     void showContextMenu(Event*, const Vector<ContextMenuItem*>& items);
 
 private:
+#if ENABLE(CONTEXT_MENUS)
     friend class FrontendMenuProvider;
+#endif
     InspectorFrontendHost(InspectorFrontendClient* client, Page* frontendPage);
 
     InspectorFrontendClient* m_client;
     Page* m_frontendPage;
+#if ENABLE(CONTEXT_MENUS)
     FrontendMenuProvider* m_menuProvider;
+#endif
 };
 
 } // namespace WebCore
